Foodapp-Service.yml
#02-Foodapp-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-foodapp-service
  labels:
    app: eks-foodappfe
  annotations:    
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /    
spec:
  type: NodePort
  selector:
    app: eks-foodappfe
  ports:
    - port: 3000
      targetPort: 3000
